缺陷[#21923]: 【运行监控-视频轮巡】播放分组下的摄像机视频，视频画面顺序和分组下设置的摄像机顺序不一致
    [修改内容]: 【运行监控-视频轮巡】播放分组下的摄像机视频，视频画面顺序和分组下设置的摄像机顺序不一致
    [描述说明]:
    [问题原因]:
    [解决方法]:
    [测试建议]:

Change-Id: I67dc2bed04868e2e37de3d3a6303e17866dc5da8
Signed-off-by: taotao <taotao@yijiahe.com>